--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,3 +1,22 @@
-MODE="prod"
+# SERVICE
+MODE="dev"
 
+# TELEGRAM
 TELEGRAM_BOT_TOKEN=""
+
+# SPOTIFY
+SPOTIFY_TOKEN_LIFE_TIME="10m"
+SPOTIFY_AUTH_URL=""
+SPOTIFY_CLIENT_ID=""
+SPOTIFY_CLIENT_SECRET=""
+
+# POSTGRES
+REPOSITORY_POSTGRES_DSN="postgres://postgres:postgres@localhost:5432/postgres?sslmode=disable"
+REPOSITORY_POSTGRES_MAX_IDLE_CONNECTIONS="25"
+REPOSITORY_POSTGRES_MAX_OPEN_CONNECTIONS="25"
+REPOSITORY_POSTGRES_CONNECTION_MAX_LIFETIME="3h"
+
+# REQUEST
+REQUEST_RETRY_COUNT=5
+REQUEST_RETRY_WAIT_TIME="1s"
+REQUEST_RETRY_MAX_WAIT_TIME="5s"
